hard-gists/1940208/run.log
=== Docker Run Log for 1940208 ===
Started at: Mi 29. Okt 12:35:29 CET 2025

[2025-10-29 12:35:29] START: Running container for 1940208
[2025-10-29 12:35:30] SUCCESS: Container 12935d8773c6cba849d670145d66c7edead11c37412e35ff5edbc23bd93077a2 started for 1940208
=== Container logs for 1940208 ===
  File "/snippet.py", line 224
    print 'usage: %s image-file-1.jpg image-file-2.jpg ...' % sys.argv[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1940208 ===
[2025-10-29 12:35:32] INFO: Container 12935d8773c6cba849d670145d66c7edead11c37412e35ff5edbc23bd93077a2 has stopped
